--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   .animation-zoom-in {
     animation: zoomIn 3s ease-out forwards;
   }
+  .animation-zoom-in-2 {
+    animation: zoomIn2 1s ease-in forwards;
+  }
 }
 
 @keyframes zoomIn {
@@ -16,6 +19,15 @@
   }
   to {
     transform: scale(1.4); /* Ajuste o valor final para mais/menos zoom */
+  }
+}
+
+@keyframes zoomIn2 {
+  from {
+    transform: scale(1.02);
+  }
+  to {
+    transform: scale(1.1); /* Ajuste o valor final para mais/menos zoom */
   }
 }
 
